添加中间按钮，修改属性设置模式

--- a/JKNetWorkingDemo/ajaxHtml.html
+++ b/JKNetWorkingDemo/ajaxHtml.html
@@ -35,7 +35,7 @@ window.webkit.messageHandlers.WKScriptMessageHandler.postMessage();<br>
 <script>
     function click1() {
         alert("click1");
-        window.webkit.messageHandlers.WKScriptMessageHandler.postMessage({"funcName":"hehe","body":[]});
+        window.webkit.messageHandlers.WKScriptMessageHandler.postMessage({"funcName":"btnAction:","body":[]});
     };
     function click2() {
         alert("click2");
